@@ -7,7 +7,7 @@ GCCVER="4.5.1"
 # Binutils version to build
 BINVER="2.20.51"
 # NuttX version to build
-NUTTXVER="5.13"
+NUTTXVER="5.17"
 # Gdb version
 GDBVER="7.2"
 # Where the RX patches are
